; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sound/pci/hda/extr_hdacc.c_hdacc_unsol_alloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sound/pci/hda/extr_hdacc.c_hdacc_unsol_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hdacc_softc = type { i32** }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32)* @hdacc_unsol_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hdacc_unsol_alloc(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.hdacc_softc*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = call %struct.hdacc_softc* @device_get_softc(i32* %10)
  store %struct.hdacc_softc* %11, %struct.hdacc_softc** %8, align 8
  %12 = load i32, i32* %7, align 4
  %13 = and i32 %12, 63
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  store i32 %14, i32* %9, align 4
  br label %15

15:                                               ; preds = %43, %3
  %16 = load %struct.hdacc_softc*, %struct.hdacc_softc** %8, align 8
  %17 = getelementptr inbounds %struct.hdacc_softc, %struct.hdacc_softc* %16, i32 0, i32 0
  %18 = load i32**, i32*** %17, align 8
  %19 = load i32, i32* %9, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i32*, i32** %18, i64 %20
  %22 = load i32*, i32** %21, align 8
  %23 = icmp eq i32* %22, null
  br i1 %23, label %24, label %38

24:                                               ; preds = %15
  %25 = load i32*, i32** %6, align 8
  %26 = load %struct.hdacc_softc*, %struct.hdacc_softc** %8, align 8
  %27 = getelementptr inbounds %struct.hdacc_softc, %struct.hdacc_softc* %26, i32 0, i32 0
  %28 = load i32**, i32*** %27, align 8
  %29 = load i32, i32* %9, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds i32*, i32** %28, i64 %30
  store i32* %25, i32** %31, align 8
  %32 = load i32*, i32** %5, align 8
  %33 = call i32 @device_get_parent(i32* %32)
  %34 = load i32*, i32** %5, align 8
  %35 = load i32, i32* %9, align 4
  %36 = call i32 @HDAC_UNSOL_ALLOC(i32 %33, i32* %34, i32 %35)
  %37 = load i32, i32* %9, align 4
  store i32 %37, i32* %4, align 4
  br label %48

38:                                               ; preds = %15
  %39 = load i32, i32* %9, align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* %9, align 4
  %41 = load i32, i32* %9, align 4
  %42 = and i32 %41, 63
  store i32 %42, i32* %9, align 4
  br label %43

43:                                               ; preds = %38
  %44 = load i32, i32* %9, align 4
  %45 = load i32, i32* %7, align 4
  %46 = icmp ne i32 %44, %45
  br i1 %46, label %15, label %47

47:                                               ; preds = %43
  store i32 -1, i32* %4, align 4
  br label %48

48:                                               ; preds = %47, %24
  %49 = load i32, i32* %4, align 4
  ret i32 %49
}

declare dso_local %struct.hdacc_softc* @device_get_softc(i32*) #1

declare dso_local i32 @HDAC_UNSOL_ALLOC(i32, i32*, i32) #1

declare dso_local i32 @device_get_parent(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
